kube/graveyard/deluge/deluge.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
  namespace: media
  labels:
    app.kubernetes.io/name: deluge
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: deluge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deluge
      annotations:
        diun.enable: "true"
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: deluge
          image: lscr.io/linuxserver/deluge:arm64v8-2.1.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          ports:
            - containerPort: 8112
              name: web-ui
              protocol: TCP
            - containerPort: 6881
              name: torrent-tcp
              protocol: TCP
            - containerPort: 6881
              name: torrent-udp
              protocol: UDP
          volumeMounts:
            - mountPath: "/config"
              name: deluge-config
            - mountPath: /downloads
              name: data

        # to test its working start a debug pod and run `curl https://ipinfo.io` and you should not see your home IP address
        # > kubectl -n media exec -it `kubectl -n media get pods -l app.kubernetes.io/name=deluge -o name` -- bash
        # > curl https://ipinfo.io
        - name: gluetun
          image: ghcr.io/qdm12/gluetun:v3.35
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 9999
              name: gluetun-health
              protocol: TCP
          volumeMounts:
            - name: tunnel
              mountPath: /dev/net/tun
          #livenessProbe:
          #  httpGet:
          #    path: /
          #    port: 9999
          #  initialDelaySeconds: 30
          #  timeoutSeconds: 30
          #readinessProbe:
          #  httpGet:
          #    path: /
          #    port: 9999
          #  initialDelaySeconds: 30
          #  timeoutSeconds: 10
      volumes:
        - name: deluge-config
          persistentVolumeClaim:
            claimName: deluge-config
        - name: data
          nfs: # data folder is a mounted pre-existing NFS share, *not* a PV/PVC
            server: 192.168.1.200
            path: /volume1/Media/torrents
        - name: tunnel
          hostPath:
            path: /dev/net/tun
